--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seeds.ts"
@@ -15,6 +16,8 @@
     "@prisma/client": "^5.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "react": "^18",
