--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "lucide-react": "^0.376.0",
